friends bar overflow fixed

--- a/client/src/components/FriendsBar/FriendsBar.css
+++ b/client/src/components/FriendsBar/FriendsBar.css
@@ -1,7 +1,9 @@
 .friends-bar-container {
-  padding: 10px;
+  padding: 10px 10px 0 10px;
   height: inherit;
   max-width: 150px;
+  display: flex;
+  flex-direction: column;
 }
 .friends-bar-header {
   background-color: #202c59;
@@ -19,7 +21,9 @@
   padding: 5px 10px;
   border-radius: 5px;
   color: #f8f5e3;
-  overflow-y: scroll;
+  overflow: scroll;
+  overscroll-behavior: contain;
+  margin-bottom: 20px;
 }
 .friends-list-container li {
   list-style: none;
